--- a/server/package.json
+++ b/server/package.json
@@ -12,9 +12,12 @@
     "license": "ISC",
     "dependencies": {
         "@now/node": "^1.7.3",
+        "bcrypt": "^5.0.0",
         "cors": "^2.8.5",
         "dotenv": "^8.2.0",
+        "email-validator": "^2.0.4",
         "express": "^4.17.1",
+        "jsonwebtoken": "^8.5.1",
         "monk": "^7.3.0",
         "nodemon": "^2.0.4"
     }
